# content-gen

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: makefile-quality-gates.mdc
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  gemini_client.py
app/models/: __init__.py  blocks.py  bounding_box.py  caption.py  detected_visual.py  document.py  metadata.py  narration.py  page.py  paper_brief.py  pipeline.py  render.py  scene.py  screenshot.py  script.py  script_generation.py  section.py  section_selection.py  storyboard.py  storyboard_generation.py  (+3 more)
scripts/: check_gemini.py
tests/: conftest.py  test_blocks.py  test_bounding_box.py  test_camera_planner.py  test_chatterbox_tts.py  test_config.py  test_document_sections.py  test_duration_budget.py  test_figure_detector.py  test_gemini_client.py  test_gemini_tts.py  test_highlight_resolver.py  test_logging.py  test_main.py  test_models.py  test_paper_brief_generator.py  test_paper_brief_prompts.py  test_paper_brief_stage.py  test_pdf_extractor.py  test_progress.py  test_prompts.py  test_render_assembler.py  test_render_audio.py  test_render_camera.py  test_render_ffmpeg.py  test_render_models.py  test_render_pipeline.py  test_render_project.py  test_render_screenshot.py  test_render_subtitles.py  test_render_voice.py  test_screenshot_region_planner.py  test_script_generation_models.py  test_script_generator.py  test_script_models.py  test_script_prompts.py  test_section_selection_models.py  test_section_selector.py  test_semantic_parser.py  test_semantic_parser_coverage.py  (+7 more)
(+48 files in other folders)
